@@ -62,16 +62,12 @@ public abstract class FileSystemReleaseFilter implements Filter {
    * at its completion (in a finally block) releases the filesystem instance
    * back to the {@link FileSystemAccess} service.
    *
-   * @param servletRequest
-   *     servlet request.
-   * @param servletResponse
-   *     servlet response.
-   * @param filterChain
-   *     filter chain.
-   * @throws IOException
-   *     thrown if an IO error occurrs.
-   * @throws ServletException
-   *     thrown if a servet error occurrs.
+   * @param servletRequest servlet request.
+   * @param servletResponse servlet response.
+   * @param filterChain filter chain.
+   *
+   * @throws IOException thrown if an IO error occurs.
+   * @throws ServletException thrown if a servlet error occurs.
    */
   @Override
   public void doFilter(ServletRequest servletRequest,
